--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,6 +23,10 @@
 }
 *{
   font-family: "letra1" , sans-serif ;
+  overflow-x:"hidden"
+}
+@media (max-width: 768px) {
+
 }
 body {
   color: rgb(var(--foreground-rgb));
@@ -62,4 +66,9 @@ body {
 }
 .slick-dots li:hover{
   color: white !important;
+}
+
+.gradiente{
+  background: rgb(3,195,236);
+background: linear-gradient(90deg, rgba(3,195,236,1) 0%, rgba(251,213,213,1) 42%);
 }
