--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -123,10 +123,6 @@ body::-webkit-scrollbar-thumb {
 
 @media (max-width: 768px) {
   .h-20 {
-    height: auto; 
-  }
-
-  .w-60 {
-    width: 100%; 
+    height: 50px; 
   }
 }
