--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,25 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Vithkuqi&family=Roboto:ital,wght@0,400;0,700;1,900&display=swap');
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-    background-color: linear-gradient(90deg, #03c3ec 0%, #fbd5d5 42%);
-    ;
-  }
-}
-
 @font-face {
   font-family: "letra1";
   src: url(../public/fonts/Lato-Regular.ttf);
@@ -146,4 +124,37 @@ body::-webkit-scrollbar-thumb {
     visibility: hidden;
   }
 
+}
+
+@media (max-width: 767px) {
+  .menu-mobile {
+    display: flex;
+    flex-direction: column;
+    margin-top: -15px;
+    
+ 
+  }
+
+}
+
+@media (max-width: 918px) {
+  .link-mobile {
+    padding: 5px;
+    font-size: 20px;
+  }
+
+}
+@media (max-width: 858px) {
+  .link-mobile {
+    padding: 4px;
+    font-size: 17px;
+    
+  }
+  .logogst{
+    padding: 2px;
+    margin-left: -2px;
+  }
+  .btn-carrito{
+    margin-right: -2px;
+  }
 }
